--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
     padding: 0%;
 }
     
-}
 h2{
-    font-size: 5rem;
+    font-size: 2rem;
+
 }
 h3{
-    font-size: 2rem;
+    font-size: 3rem;
+    
 }
 p{
     font-family: sans-serif;
@@ -21,16 +22,23 @@ p{
 /*Everything for navigation bar*/
 nav {
     display: flex;
-    padding: 2rem;
-    background-color: rgb(8, 10, 8);
-    text-align: right;
-    justify-content: right;
-    align-items: right;
-    
+    align-items: flex-end;
+    position:fixed;
+    width:100%;
+    background: rgb(87, 192, 26);
 }
-
+a{
+    color: aliceblue;
+    text-decoration: none;
+}
+.active{
+    color: rgb(0, 0, 0);
+}
+a:hover{
+    color: aqua;
+}
 li {
-    font-size: 2rem;
+    font-size: 1.2rem;
     padding: 1rem;
     text-decoration: none;
     list-style: none;
@@ -38,22 +46,19 @@ li {
     color: aliceblue;
 }
 
-/*Everuthing for home page*/
+/*Everything for home page*/
 #Home_page{
-    background-image: linear-gradient(180deg, white,rgb(186, 206, 245));
+    /* background-image: linear-gradient(180deg, white,rgb(181, 195, 223)); */
     margin-bottom: 1rem;
 }
 .main {
-    height: 70vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-bottom: 3rem;
 }
-#Home_page{
-    height: 100%;
-    width: 100%;
-}
+
 .left {
     position: relative;
     left: 30px;
@@ -69,25 +74,35 @@ li {
 }
 /*Everything for 2nd page*/
 #About_us{
-    background-image: linear-gradient(180deg, white, rgb(186,206,245));
+    background-image: linear-gradient(180deg, white, rgb(89, 248, 124));
     height: 95vh;
     width: 100%;
     align-items: center;
     justify-content: center;
+    padding-top: 5rem;
+    text-align: center;
 }
 
 
 /*Everything for 3rd page */
 #Our_team{
-    background-image: linear-gradient(180deg, white, rgb(186,206,245));
+    background-image: linear-gradient(180deg, white, rgb(89, 248, 124));
     height: 95vh;
     width: 100%;
+    padding-top: 5rem;
+    text-align: center;
     
 }
 
 /*Everything for 4th page*/
 #Contact_us{
-    background-image: linear-gradient(180deg, white, rgb(186,206,245));
-    height: 95vh;
+    background-image: linear-gradient(180deg, white, rgb(89, 248, 124));
+    height: 87vh;
     width: 100%;
+    padding-top: 5rem;
+    text-align: center;
+}
+#logo{
+    height: 14rem;
+    position: relative;
 }
